--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
 </head>
 <body>
-  Hello World
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="page-header" style="text-align: center;">
+          <h1 class="noto" style="font-size:45px;">
+            <b><a href="/">OtakuMe</a></b>
+          </h1>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 <script src="static/main.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
