--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!--- Custom stylesheet -->
   <link rel="stylesheet" href="static/bootstrap.css">
   <link rel="stylesheet" href="static/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Noto+Sans:400,700" rel="stylesheet">
 </head>
 <body>
   <div class="container">
