--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
   <!--- Custom stylesheet -->
   <link rel="stylesheet" href="static/bootstrap.css">
   <link rel="stylesheet" href="static/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Noto+Sans:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,500,700|Raleway:300,500,700" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="page-header" style="text-align: center;">
-          <h1 class="noto" style="font-size:45px;">
-            <b><a href="/">OtakuMe</a></b>
+          <h1 class="head">
+            <a style="text-decoration:none; color:inherit;" href="index.html">
+            NOAH YOSHIDA
+            </a>
           </h1>
         </div>
       </div>
     </div>
   </div>
+  <div class="container-1">
+    <p> < N / Y > </p>
+ </div>
 </body>
 <script src="static/main.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
