--- a/index.html
+++ b/index.html
@@ -11,22 +11,65 @@
   <link rel="stylesheet" href="static/main.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,500,700|Raleway:300,500,700" rel="stylesheet">
 </head>
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="page-header" style="text-align: center;">
-          <h1 class="head">
-            <a style="text-decoration:none; color:inherit;" href="index.html">
-            NOAH YOSHIDA
-            </a>
-          </h1>
-        </div>
+<body class="steel-grey-bg lato">
+  <div class="row">
+    <div class="col-md-7 offset-md-4">
+      <div class="page-header head fixed" style="text-align: center;">
+        <h1 class="head gold-text raleway">
+          <a style="text-decoration:none; color:inherit;" href="index.html">
+          NOAH YOSHIDA
+          </a>
+        </h1>
       </div>
     </div>
   </div>
-  <div class="container-1">
-    <p> < N / Y > </p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="container subsection-1 burnt-red-bg">
+    <!-- <div class="container-1"> -->
+      <p class="gold-text"> < N / Y > </p>
+      <br>
+      <br>
+      <br>
+    <!-- </div> -->
  </div>
 </body>
 <script src="static/main.js"></script>
