--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
   <!--- Boostrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <!--- Custom stylesheet -->
-  <link rel="stylesheet" href="static/bootstrap.css">
   <link rel="stylesheet" href="static/main.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,500,700|Raleway:300,500,700" rel="stylesheet">
 </head>
 <body class="steel-grey-bg lato">
   <div class="row">
-    <div class="col-md-7 offset-md-4">
+    <div class="col-md-8 offset-md-5">
       <div class="page-header head fixed" style="text-align: center;">
-        <h1 class="head gold-text raleway">
+        <h1 class="head off-white-text raleway">
           <a style="text-decoration:none; color:inherit;" href="index.html">
           NOAH YOSHIDA
           </a>
@@ -65,7 +64,7 @@
   <br>
   <div class="container subsection-1 burnt-red-bg">
     <!-- <div class="container-1"> -->
-      <p class="gold-text"> < N / Y > </p>
+      <p class="gold-text">  </p>
       <br>
       <br>
       <br>
