fixed random column

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
   <link rel="stylesheet" href="static/main.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,500,700|Raleway:300,500,700" rel="stylesheet">
 </head>
-<body class="steel-grey-bg lato">
-  <div class="row">
-    <div class="col-md-8 offset-md-5">
-      <div class="page-header head fixed" style="text-align: center;">
-        <h1 class="head off-white-text raleway">
-          <a style="text-decoration:none; color:inherit;" href="index.html">
-          NOAH YOSHIDA
-          </a>
-        </h1>
+<body class="steel-grey-bg lato">   
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 offset-md-5">
+          <div class="page-header head fixed" style="text-align: center;">
+            <h1 class="head off-white-text raleway">
+              <a style="text-decoration:none; color:inherit;" href="index.html">
+              NOAH YOSHIDA
+              </a>
+            </h1>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
   <br>
   <br>
   <br>
