--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <!--- Custom stylesheet -->
   <link rel="stylesheet" href="static/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,500,700|Raleway:300,500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,500,700|Raleway:300,500,700|Megrim" rel="stylesheet">
 </head>
 <body class="steel-grey-bg lato">   
     <div class="container">
       <div class="row">
-        <div class="col-md-8 offset-md-5">
+        <div class="col-md-8 offset-md-4">
           <div class="page-header head fixed" style="text-align: center;">
-            <h1 class="head off-white-text raleway">
-              <a style="text-decoration:none; color:inherit;" href="index.html">
+            <h1 class="head off-white-text">
+              <a style="text-decoration:none; color:inherit;" class="megrim" href="index.html">
               NOAH YOSHIDA
               </a>
             </h1>
@@ -64,14 +64,23 @@
   <br>
   <br>
   <br>
+  <br>
   <div class="container subsection-1 burnt-red-bg">
     <!-- <div class="container-1"> -->
-      <p class="gold-text">  </p>
-      <br>
-      <br>
-      <br>
+      <h2 class="megrim section-head"><b>About Me</b></h2>
+      <p class="dark-text contents">Coming from small-ish town Kansas, I was always interested in computers but never had the opprotunity to explore them in school. I was also interested in architecutre, and spent highschool thinking that was going to be my major. While making my college portfolio, I found that I enjoyed more so the technology I used to create art, rather than the actual creation of art itself. After accepting my offer to attend Notre Dame, I decided to switch into Computer Science to follow this passion. When I came to college, I was determined to figure out how computers and technology work, and find a way to contribute to this community.</p>
+      <p class="dark-text contents"> My current interests lie in machine leanring. The first project I did that introdued me to CS was a Neural Network, and ever since them I have been fascinated with the field. Since I only started exploring CS in May 2017, I am open to learning anything and have been exposing myself to as many different facets to this field as possible, both inside and outside of class. </p>
+
     <!-- </div> -->
  </div>
+    <div class="container subsection-1 gold-bg">
+        <h2 class="megrim section-head">
+            <b>Contact</b>
+        </h2>
+        <div class="well">
+            <p class="dark-text contact">IRC: Snoonet: SILV3R</p>
+        </div>
+    </div>
 </body>
 <script src="static/main.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
