--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" 
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" 
           crossorigin="anonymous">
+    <!--- Boostrap - Font Awesome -->
+     <link rel="stylesheet" 
+           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <!--- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
@@ -30,16 +33,13 @@
     <ul id="slide-out" class="side-nav fixed z-depth-0">
         <li><a href="#" 
                class="hoverable"
-               style="text-decoration:none;
-                color: #E0CFAF;">Top</a></li>
+               ><span class="fa fa-home" aria-hidden="true"></span> Top</a></li>
         <li><a href="#aboutme" 
                class="hoverable"
-               style="text-decoration:none;
-                color: #E0CFAF;">About Me</a></li>
+               ><span class="fa fa-commenting" aria-hidden="true"></span> About Me</a></li>
         <li><a href="#contact" 
                class="hoverable"
-               style="text-decoration:none;
-                color: #E0CFAF;">Contact</a></li>
+               ><span class="fa fa-address-book" aria-hidden="true"></span> Contact</a></li>
     </ul>
 
 
@@ -56,8 +56,6 @@
             </div>
         </div>
     </div>
-
-
     <br>
     <br>
     <br>
@@ -101,7 +99,7 @@
     <br>
     <div class="container subsection-1 burnt-red-bg" id="aboutme">
         <!-- <div class="container-1"> -->
-        <h2 class="megrim section-head"><b>About Me</b></h2>
+        <h2 class="megrim section-head"><span class="fa fa-commenting" aria-hidden="true"></span><b> About Me</b></h2>
         <p class="dark-text contents">Coming from small-ish town Kansas, I was always interested in computers but never had the opprotunity to explore them in school. I was also interested in architecutre, and spent highschool thinking that was going to be my major. While making my
             college portfolio, I found that I enjoyed more so the technology I used to create art, rather than the actual creation of art itself. After accepting my offer to attend Notre Dame, I decided to switch into Computer Science to follow this passion.
             When I came to college, I was determined to figure out how computers and technology work, and find a way to contribute to this community.</p>
