--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                ><span class="fa fa-home" aria-hidden="true"></span> Home</a></li>
         <li><a href="projects.html" 
                class="hoverable"
-               ><span class="fa fa-commenting" aria-hidden="true"></span> Projects</a></li>
+               ><span class="fa fa-gavel" aria-hidden="true"></span> Projects</a></li>
         <li><a href="portfolio.html" 
                class="hoverable"
-               ><span class="fa fa-address-book" aria-hidden="true"></span> Portfolio</a></li>
+               ><span class="fa fa-picture-o" aria-hidden="true"></span> Portfolio</a></li>
     </ul>
 
 
@@ -111,29 +111,119 @@
 
     <div class="container subsection-1 pink-bg" id="resume">
       <h2 class="megrim section-head"><span class="fa fa-file-text-o" aria-hidden="true"></span><b> Resume</b></h2>
+
     <h3 class="megrim subsection-head"><span class="fa fa-university" aria-hidden="true"></span>
       <b> Education</u></b>
     </h3>
+    <div class="row">
+    <div class="col md-6">
   <p class="section-title"> └─ <b>University of Notre Dame</b></p>
   <p class="section-contents"> ├─ GPA: 3.69/4.0</p>
   <p class="section-contents"> ├─ Degree: Computer Science</p>
   <p class="section-contents"> └─ Expected Graduation: May 2020</p>
+  </div>
+
+ 
+</div>
+
+
   <h3 class="megrim subsection-head"><span class="fa fa-cog" aria-hidden="true"></span>
       <b> Skills</u></b>
   </h3>
-    <p class="section-title"> └─ <b>Programming</b></p>
+  <div class="row">
+        <div class="col md-5">
+    <p class="section-title"> ├─ <b>Programming</b></p>
     <p class="section-contents"> ├─ <span class="fa fa-battery-4" aria-hidden="true"></span>
      Python • C++ 
    </p>
+    <p class="section-contents"> ├─ <span class="fa fa-battery-2" aria-hidden="true"></span>
+      SQL 
+    </p>
+    <p class="section-contents"> └─ <span class="fa fa-battery-1" aria-hidden="true"></span>
+      JavaScript • Bash 
+    </p>
+  </div>
+
+  <div class="col md-5">
+    <p class="section-title"> ── <b>Technologies and Frameworks</b></p>
+    <p class="section-contents"> ├─ <span class="fa fa-battery-4" aria-hidden="true"></span>
+     Unix • Django • Git  
+   </p>
+   <p class="section-contents" style="padding-left: 95px;">└─ Web Scraping </p>
+    <p class="section-contents"> ├─ <span class="fa fa-battery-3" aria-hidden="true"></span>
+     UI / UX Design • MATLAB
+    </p>
     <p class="section-contents"> └─ <span class="fa fa-battery-2" aria-hidden="true"></span>
-      SQL • Bash • JavaScript
+      TensorFlow 
+    </p>
+  </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <p class="section-title"> └─ <b>Formatting and Style</b></p>
+      <p class="section-contents"> └─ <span class="fa fa-battery-3" aria-hidden="true"></span>
+       HTML • CSS • LaTeX • Markdown
+       </p>
+    </div>
+  </div>
+
+   <h3 class="megrim subsection-head"><span class="fa fa-briefcase" aria-hidden="true"></span>
+      <b> Work Experience</u></b>
+  </h3>
+    <p class="section-title"> ├─ <b>Natural Language Processing Group ➤ Assistant | Dec 2017 - Present</b></p>
+    <p class="section-contents"> ├─ 
+      Collaborates with a graduate student to syntactically analyze St. Augustine's Sermons  
+   </p>
+    <p class="section-contents"> └─ 
+      Develops useful tools in Python and collaborates using Git and ShareLatex
     </p>
 
+    <p> <!--- Break --> </p>
+    <p class="section-title"> ├─ <b>Oracle Japan ➤ Management Consulting Intern | Jun 2017 - Jul 2017</b></p>
+    <p class="section-contents"> ├─ 
+      Analyzed Oracle Japan's IaaS and PaaS business strategies in a group 
+   </p>
+    <p class="section-contents"> ├─ 
+      Interviewed executives and employees to determine operational challenges 
+    </p>
+     <p class="section-contents"> └─ 
+      Presented findings and possible solutions to executives in a group
+    </p>
+    <p> <!--- Break --> </p>
+  <p class="section-title"> └─ <b>University of Notre Dame ➤ Admissions Assistant | Mar 2017 - Present</b></p>
+    <p class="section-contents"> ├─ 
+      Serves as a student commitee member for the Reilly-Spring Vis Program
+   </p>
+    <p class="section-contents"> ├─ 
+      Collaborates with fellow members and the admissions department to run the Reilly-Spring Vis program, a recruitment program bringing top high-school applicants to campus
+    </p>
+     <p class="section-contents"> └─ 
+      Reaches out to students prior to arrival, addressing possible concerns and answering questions
+    </p>
+
+    <h3 class="megrim subsection-head"><span class="fa fa-trophy" aria-hidden="true"></span>
+      <b> Honors and Awards</u></b>
+  </h3>
+ 
+    <p class="section-title"> ├─ <b>Notre Dame Scholar's Program</b>
+      <a href="http://financialaid.nd.edu/prospective-students/funding/merit-based-assistance/the-notre-dame-scholar-award-program/" target="_blank">
+    <span class="fa fa-external-link" aria-hidden="true"></span></a>
+    </p>
+    <p class="section-contents"> └─ 
+     Undergraduate Merit Scholarship 
+   </p>
+    <p class="section-title"> ├─ <b>Glynn Family Honor's Program (2016-2017)</b>
+      <a href="https://glynnhonors.nd.edu/" target="_blank">
+    <span class="fa fa-external-link" aria-hidden="true"></span></a>
+    </p>
+    <p class="section-title"> └─ <b>Building Bridges Mentoring Program</b>
+    <a href="http://msps.nd.edu/ways-to-get-involved/academic-initiatives/building-bridges/" target="_blank">
+    <span class="fa fa-external-link" aria-hidden="true"></span></a></p>
 
 
-    <br>
-    <br>
-    <br>
+     <br>
+
     </div>
 
     <br>
@@ -146,17 +236,19 @@
         <div class="row">
           <div class="col-md-4">
             <p class="source-code-pro">
-        <span class="fa fa-envelope-o" aria-hidden="true"></span> Email: nyoshida@nd.edu
+        <span class="fa fa-envelope-o" aria-hidden="true"></span> <b>Email: nyoshida@nd.edu</b>
       </p>
       </div>
           <div class="col-md-4">
             <p class="source-code-pro">
-              <span class="fa fa-comment-o" aria-hidden="true"></span> IRC-Snoonet: SILV3R
+              <span class="fa fa-comment-o" aria-hidden="true"></span> <b>IRC-Snoonet: SILV3R</b>
             </p>
           </div>
             <div class="col-md-4">
               <p class="sourse-code-pro">
-              <span class="fa fa-github" aria-hidden="true"><a href="https://github.com/noyoshi" style="text-decoration: none; color:inherit" target="_blank"> Github: noyoshi</a></span> 
+              <span class="fa fa-github" aria-hidden="true"><a href="https://github.com/noyoshi" style="text-decoration: none; color:inherit" target="_blank"> 
+                <b>Github: noyoshi</b>
+              </a></span> 
             </p>
           </div>
       </div>
